Fix some bugs and adding chat.

--- a/public/templates/directive/directiveImage.html
+++ b/public/templates/directive/directiveImage.html
@@ -20,7 +20,8 @@
         </div>
     </md-card-content>
     <md-card-actions layout="row" layout-align="center center">
-        <md-button ng-show="!spinnerImage" ng-click="takeImage(dashboard)" class="md-raised" style="margin-bottom: 20px">
+        <md-button ng-show="!spinnerImage" ng-click="takeImage(dashboard)" class="md-raised"
+                   style="margin-bottom: 20px">
             <md-icon md-font-set="material-icons"> camera</md-icon>
             take picture
         </md-button>
