--- a/public/templates/general/sidenav.html
+++ b/public/templates/general/sidenav.html
@@ -24,6 +24,12 @@
                 <p>Furby</p>
             </md-list-item>
             <md-divider></md-divider>
+            <md-subheader class="md-no-sticky">Menu</md-subheader>
+            <md-list-item ng-click="menuChatBot()">
+                <md-icon md-font-set="material-icons"> chat</md-icon>
+                <p>ChatBot</p>
+            </md-list-item>
+            <md-divider></md-divider>
             <md-subheader class="md-no-sticky">Education</md-subheader>
             <md-list-item ng-click="menuGrovePi1()">
                 <md-icon md-font-set="material-icons"> extension</md-icon>
