--- a/public/templates/sites/demonstration.html
+++ b/public/templates/sites/demonstration.html
@@ -5,6 +5,12 @@
             data-sizex="2" data-sizey="2"
             max_size_x="2" max_size_y="2"
             min_size_x="2" min_size_y="2">
+            <widget-iot></widget-iot>
+        </li>
+        <li data-gridster-item data-row="0" data-col="0"
+            data-sizex="2" data-sizey="2"
+            max_size_x="2" max_size_y="2"
+            min_size_x="2" min_size_y="2">
             <widget-humidity></widget-humidity>
         </li>
         <li data-gridster-item data-row="0" data-col="2"
